# ollama_proxy_server

./: .yamllint.yml  Dockerfile  README.md  config.ini  entry-point.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: github-actions-build-wheel.yml  github-actions-docker.yml  github-actions-quality.yml  github-actions-tests.yml  github-actions-tox.yml
ollama_proxy_server/: add_user.py  add_user_jwt.py  envdefault.py  main.py  ollama_logger.py
ollama_proxy_server/ollama_queues/: __init__.py  base_queue.py  model_queue.py  simple_queue.py
scripts/: run-shellcheck.sh
tests/: test_jwt_speed.py  test_queues.py
